// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bills bills comtainer should match the snapshot if is Loading is false 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Bills
    billArray={
      Array [
        Object {
          "bills": Array [
            Object {
              "id": "hr123",
              "name": "sara",
              "somethingelse": "xxx",
            },
            Object {
              "id": "hr234",
              "name": "David",
              "somethingelse": "xxx",
            },
          ],
          "congress": 115,
        },
      ]
    }
    errorMessage=""
    favorites={
      Array [
        "hr-45123",
        "hr-7653",
      ]
    }
    fetchBillsThunk={
      [MockFunction] {
        "calls": Array [
          Array [
            "https://api.propublica.org/congress/v1/115/both/bills/enacted.json",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    isLoading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="bill-container"
      >
        <div
          className="bill-msg"
        >
          <h3>
            Below are the bills that became law during the 115th Congress.
          </h3>
        </div>
        <div
          className="cardContainer"
        >
          <withRouter(Connect(Card))
            id="hr123"
            name="sara"
            somethingelse="xxx"
          />
          <withRouter(Connect(Card))
            id="hr234"
            name="David"
            somethingelse="xxx"
          />
        </div>
      </section>,
      "className": "bills-pg",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="bill-msg"
          >
            <h3>
              Below are the bills that became law during the 115th Congress.
            </h3>
          </div>,
          <div
            className="cardContainer"
          >
            <withRouter(Connect(Card))
              id="hr123"
              name="sara"
              somethingelse="xxx"
            />
            <withRouter(Connect(Card))
              id="hr234"
              name="David"
              somethingelse="xxx"
            />
          </div>,
        ],
        "className": "bill-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h3>
              Below are the bills that became law during the 115th Congress.
            </h3>,
            "className": "bill-msg",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Below are the bills that became law during the 115th Congress.",
            },
            "ref": null,
            "rendered": "Below are the bills that became law during the 115th Congress.",
            "type": "h3",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <withRouter(Connect(Card))
                id="hr123"
                name="sara"
                somethingelse="xxx"
              />,
              <withRouter(Connect(Card))
                id="hr234"
                name="David"
                somethingelse="xxx"
              />,
            ],
            "className": "cardContainer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "hr123",
              "nodeType": "function",
              "props": Object {
                "id": "hr123",
                "name": "sara",
                "somethingelse": "xxx",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "hr234",
              "nodeType": "function",
              "props": Object {
                "id": "hr234",
                "name": "David",
                "somethingelse": "xxx",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="bill-container"
        >
          <div
            className="bill-msg"
          >
            <h3>
              Below are the bills that became law during the 115th Congress.
            </h3>
          </div>
          <div
            className="cardContainer"
          >
            <withRouter(Connect(Card))
              id="hr123"
              name="sara"
              somethingelse="xxx"
            />
            <withRouter(Connect(Card))
              id="hr234"
              name="David"
              somethingelse="xxx"
            />
          </div>
        </section>,
        "className": "bills-pg",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="bill-msg"
            >
              <h3>
                Below are the bills that became law during the 115th Congress.
              </h3>
            </div>,
            <div
              className="cardContainer"
            >
              <withRouter(Connect(Card))
                id="hr123"
                name="sara"
                somethingelse="xxx"
              />
              <withRouter(Connect(Card))
                id="hr234"
                name="David"
                somethingelse="xxx"
              />
            </div>,
          ],
          "className": "bill-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Below are the bills that became law during the 115th Congress.
              </h3>,
              "className": "bill-msg",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Below are the bills that became law during the 115th Congress.",
              },
              "ref": null,
              "rendered": "Below are the bills that became law during the 115th Congress.",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <withRouter(Connect(Card))
                  id="hr123"
                  name="sara"
                  somethingelse="xxx"
                />,
                <withRouter(Connect(Card))
                  id="hr234"
                  name="David"
                  somethingelse="xxx"
                />,
              ],
              "className": "cardContainer",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "hr123",
                "nodeType": "function",
                "props": Object {
                  "id": "hr123",
                  "name": "sara",
                  "somethingelse": "xxx",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": "hr234",
                "nodeType": "function",
                "props": Object {
                  "id": "hr234",
                  "name": "David",
                  "somethingelse": "xxx",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Bills bills comtainer should match the snapshot if is Loading is true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Bills
    billArray={
      Array [
        Object {
          "bills": Array [
            Object {
              "id": "hr123",
              "name": "sara",
              "somethingelse": "xxx",
            },
            Object {
              "id": "hr234",
              "name": "David",
              "somethingelse": "xxx",
            },
          ],
          "congress": 115,
        },
      ]
    }
    errorMessage=""
    favorites={
      Array [
        "hr-45123",
        "hr-7653",
      ]
    }
    fetchBillsThunk={
      [MockFunction] {
        "calls": Array [
          Array [
            "https://api.propublica.org/congress/v1/115/both/bills/enacted.json",
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
    isLoading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <section
        className="bill-container"
      >
        <div
          className="bill-msg"
        >
          <h3>
            Below are the bills that became law during the 115th Congress.
          </h3>
        </div>
        <div
          className="cardContainer"
        >
          <Loading />
        </div>
      </section>,
      "className": "bills-pg",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="bill-msg"
          >
            <h3>
              Below are the bills that became law during the 115th Congress.
            </h3>
          </div>,
          <div
            className="cardContainer"
          >
            <Loading />
          </div>,
        ],
        "className": "bill-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <h3>
              Below are the bills that became law during the 115th Congress.
            </h3>,
            "className": "bill-msg",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Below are the bills that became law during the 115th Congress.",
            },
            "ref": null,
            "rendered": "Below are the bills that became law during the 115th Congress.",
            "type": "h3",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Loading />,
            "className": "cardContainer",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "section",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <section
          className="bill-container"
        >
          <div
            className="bill-msg"
          >
            <h3>
              Below are the bills that became law during the 115th Congress.
            </h3>
          </div>
          <div
            className="cardContainer"
          >
            <Loading />
          </div>
        </section>,
        "className": "bills-pg",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="bill-msg"
            >
              <h3>
                Below are the bills that became law during the 115th Congress.
              </h3>
            </div>,
            <div
              className="cardContainer"
            >
              <Loading />
            </div>,
          ],
          "className": "bill-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <h3>
                Below are the bills that became law during the 115th Congress.
              </h3>,
              "className": "bill-msg",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Below are the bills that became law during the 115th Congress.",
              },
              "ref": null,
              "rendered": "Below are the bills that became law during the 115th Congress.",
              "type": "h3",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Loading />,
              "className": "cardContainer",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "section",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
